# sewer-flow

./: .envrc  .gitignore  ENVS.md  docker-compose.yml  justfile  main.py  myredis.py  pyproject.toml
git_hooks/: install.sh  pre-commit
src/: __init__.py  canonical.py  config.py  redis_client.py  runner.py
src/providers/: __init__.py  base.py  max.py  tamtam.py  telegram.py
