[project]
name = "sewer-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "basedpyright>=1.32.1",
    "redis>=7.0.1",
    "ruff>=0.14.2",
    "types-redis>=4.6.0.20241004",
]

[tool.basedpyright]
reportUnknownMemberType = false
